// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`readCategories should return proper categories and their pages 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "item": Object {
          "category": "Test",
          "id": "en-doc1",
          "language": "en",
          "localized_id": "doc1",
          "next": "en-doc2",
          "next_id": "doc2",
          "next_title": "Document 2",
          "permalink": "docs/en/next/doc1.html",
          "sidebar": "docs",
          "sort": 1,
          "source": "doc1.md",
          "title": "Document 1",
          "version": "next",
        },
        "type": "LINK",
      },
      Object {
        "item": Object {
          "category": "Test",
          "id": "en-doc2",
          "language": "en",
          "localized_id": "doc2",
          "permalink": "docs/en/next/doc2.html",
          "previous": "en-doc1",
          "previous_id": "doc1",
          "previous_title": "Document 1",
          "sidebar": "docs",
          "sort": 2,
          "source": "doc2.md",
          "title": "Document 2",
          "version": "next",
        },
        "type": "LINK",
      },
    ],
    "title": "Test",
    "type": "CATEGORY",
  },
  Object {
    "children": Array [
      Object {
        "item": Object {
          "category": "Test 2",
          "id": "en-doc3",
          "language": "en",
          "localized_id": "doc3",
          "permalink": "docs/en/next/doc3.html",
          "previous": "en-doc2",
          "previous_id": "doc2",
          "previous_title": "Document 2",
          "sidebar": "docs",
          "sort": 3,
          "source": "doc3.md",
          "title": "Document 3",
          "version": "next",
        },
        "type": "LINK",
      },
      Object {
        "item": Object {
          "category": "Test 2",
          "id": "en-reflinks",
          "language": "en",
          "localized_id": "reflinks",
          "permalink": "docs/en/next/reflinks.html",
          "previous": "en-doc3",
          "previous_id": "doc3",
          "previous_title": "Document 3",
          "sidebar": "docs",
          "sort": 4,
          "source": "reflinks.md",
          "title": "Reference Links",
          "version": "next",
        },
        "type": "LINK",
      },
    ],
    "title": "Test 2",
    "type": "CATEGORY",
  },
]
`;

exports[`readCategories should return proper data with categories and multiple levels of sub categories 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "item": Object {
          "category": "Test",
          "id": "en-doc1",
          "language": "en",
          "localized_id": "doc1",
          "next": "en-doc2",
          "next_id": "doc2",
          "next_title": "Document 2",
          "permalink": "docs/en/next/doc1.html",
          "sidebar": "docs",
          "sort": 1,
          "source": "doc1.md",
          "subcategory": null,
          "title": "Document 1",
          "version": "next",
        },
        "type": "LINK",
      },
      Object {
        "children": Array [
          Object {
            "item": Object {
              "category": "Test",
              "id": "en-doc2",
              "language": "en",
              "localized_id": "doc2",
              "permalink": "docs/en/next/doc2.html",
              "previous": "en-doc1",
              "previous_id": "doc1",
              "previous_title": "Document 1",
              "sidebar": "docs",
              "sort": 2,
              "source": "doc2.md",
              "subcategory": "Sub Cat 1",
              "title": "Document 2",
              "version": "next",
            },
            "type": "LINK",
          },
          Object {
            "children": Array [
              Object {
                "item": Object {
                  "category": "Test",
                  "id": "en-doc3",
                  "language": "en",
                  "localized_id": "doc3",
                  "parentSubcategory": "Sub Cat 1",
                  "permalink": "docs/en/next/doc3.html",
                  "previous": "en-doc2",
                  "previous_id": "doc2",
                  "previous_title": "Document 2",
                  "sidebar": "docs",
                  "sort": 3,
                  "source": "doc3.md",
                  "subcategory": "Sub Cat 2",
                  "title": "Document 3",
                  "version": "next",
                },
                "type": "LINK",
              },
            ],
            "title": "Sub Cat 2",
            "type": "SUBCATEGORY",
          },
          Object {
            "item": Object {
              "category": "Test",
              "id": "en-doc4",
              "language": "en",
              "localized_id": "doc4",
              "permalink": "docs/en/next/doc4.html",
              "previous": "en-doc3",
              "previous_id": "doc3",
              "previous_title": "Document 3",
              "sidebar": "docs",
              "sort": 4,
              "source": "doc4.md",
              "subcategory": "Sub Cat 1",
              "title": "Document 4",
              "version": "next",
            },
            "type": "LINK",
          },
        ],
        "title": "Sub Cat 1",
        "type": "SUBCATEGORY",
      },
      Object {
        "item": Object {
          "category": "Test",
          "id": "en-doc5",
          "language": "en",
          "localized_id": "doc5",
          "next": "en-doc6",
          "next_id": "doc6",
          "next_title": "Document 6",
          "permalink": "docs/en/next/doc5.html",
          "previous": "en-doc4",
          "previous_id": "doc4",
          "previous_title": "Document 4",
          "sidebar": "docs",
          "sort": 5,
          "source": "doc5.md",
          "title": "Document 5",
          "version": "next",
        },
        "type": "LINK",
      },
      Object {
        "children": Array [
          Object {
            "item": Object {
              "category": "Test",
              "id": "en-doc6",
              "language": "en",
              "localized_id": "doc6",
              "permalink": "docs/en/next/doc6.html",
              "previous": "en-doc5",
              "previous_id": "doc5",
              "previous_title": "Document 5",
              "sidebar": "docs",
              "sort": 6,
              "source": "doc6.md",
              "subcategory": "Sub Cat 3",
              "title": "Document 6",
              "version": "next",
            },
            "type": "LINK",
          },
          Object {
            "item": Object {
              "category": "Test",
              "id": "en-doc7",
              "language": "en",
              "localized_id": "doc7",
              "permalink": "docs/en/next/doc7.html",
              "previous": "en-doc6",
              "previous_id": "doc6",
              "previous_title": "Document 6",
              "sidebar": "docs",
              "sort": 7,
              "source": "doc7.md",
              "subcategory": "Sub Cat 3",
              "title": "Document 7",
              "version": "next",
            },
            "type": "LINK",
          },
        ],
        "title": "Sub Cat 3",
        "type": "SUBCATEGORY",
      },
      Object {
        "item": Object {
          "category": "Test",
          "id": "en-doc8",
          "language": "en",
          "localized_id": "doc8",
          "permalink": "docs/en/next/doc8.html",
          "previous": "en-doc7",
          "previous_id": "doc7",
          "previous_title": "Document 7",
          "sidebar": "docs",
          "sort": 8,
          "source": "doc8.md",
          "title": "Document 8",
          "version": "next",
        },
        "type": "LINK",
      },
    ],
    "title": "Test",
    "type": "CATEGORY",
  },
  Object {
    "children": Array [
      Object {
        "item": Object {
          "category": "Test 2",
          "id": "en-doc9",
          "language": "en",
          "localized_id": "doc9",
          "permalink": "docs/en/next/doc9.html",
          "previous": "en-doc8",
          "previous_id": "doc8",
          "previous_title": "Document 8",
          "sidebar": "docs",
          "sort": 9,
          "source": "doc9.md",
          "title": "Document 9",
          "version": "next",
        },
        "type": "LINK",
      },
    ],
    "title": "Test 2",
    "type": "CATEGORY",
  },
]
`;

exports[`readCategories should return proper data with categories and sub categories 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "item": Object {
              "category": "Test",
              "id": "en-doc1",
              "language": "en",
              "localized_id": "doc1",
              "next": "en-doc2",
              "next_id": "doc2",
              "next_title": "Document 2",
              "permalink": "docs/en/next/doc1.html",
              "sidebar": "docs",
              "sort": 1,
              "source": "doc1.md",
              "subcategory": "Sub Cat 1",
              "title": "Document 1",
              "version": "next",
            },
            "type": "LINK",
          },
          Object {
            "item": Object {
              "category": "Test",
              "id": "en-doc2",
              "language": "en",
              "localized_id": "doc2",
              "permalink": "docs/en/next/doc2.html",
              "previous": "en-doc1",
              "previous_id": "doc1",
              "previous_title": "Document 1",
              "sidebar": "docs",
              "sort": 2,
              "source": "doc2.md",
              "subcategory": "Sub Cat 1",
              "title": "Document 2",
              "version": "next",
            },
            "type": "LINK",
          },
        ],
        "title": "Sub Cat 1",
        "type": "SUBCATEGORY",
      },
      Object {
        "children": Array [
          Object {
            "item": Object {
              "category": "Test",
              "id": "en-doc3",
              "language": "en",
              "localized_id": "doc3",
              "permalink": "docs/en/next/doc3.html",
              "previous": "en-doc2",
              "previous_id": "doc2",
              "previous_title": "Document 2",
              "sidebar": "docs",
              "sort": 3,
              "source": "doc3.md",
              "subcategory": "Sub Cat 2",
              "title": "Document 3",
              "version": "next",
            },
            "type": "LINK",
          },
        ],
        "title": "Sub Cat 2",
        "type": "SUBCATEGORY",
      },
    ],
    "title": "Test",
    "type": "CATEGORY",
  },
  Object {
    "children": Array [
      Object {
        "item": Object {
          "category": "Test 2",
          "id": "en-doc4",
          "language": "en",
          "localized_id": "doc4",
          "permalink": "docs/en/next/doc4.html",
          "previous": "en-doc3",
          "previous_id": "doc3",
          "previous_title": "Document 3",
          "sidebar": "docs",
          "sort": 4,
          "source": "doc4.md",
          "title": "Document 4",
          "version": "next",
        },
        "type": "LINK",
      },
    ],
    "title": "Test 2",
    "type": "CATEGORY",
  },
]
`;
